kubernetes/llm/components/mcp-kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mcp-kubernetes
  namespace: llm
  labels:
    app.kubernetes.io/name: mcp-kubernetes
    app.kubernetes.io/instance: mcp-kubernetes
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app.kubernetes.io/name: mcp-kubernetes
